<resources>
    <string name="app_name">Instagram</string>
    <string name="signout">signOut</string>
    <string name="instagram" />

    <string name="todo">TODO</string>
    <string name="todo1">TODO1</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>

</resources>
