<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:layout_marginTop="10dp"

            android:contentDescription="@string/todo"
            android:src="@drawable/pencil" />

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="INSTAGRAM"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <Button
            android:id="@+id/Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="logout"
            android:text="SignOut"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        android:orientation="horizontal">


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/logo"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/logo"
            android:onClick="startstory"
            app:civ_border_color="@color/black"
            app:civ_border_width="3dp"
            android:layout_marginStart="5dp" />


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/icon"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/icon"
            android:onClick="startstory"
            app:civ_border_color="@color/black"
            app:civ_border_width="3dp"
            android:layout_marginStart="5dp" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/film"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/film"
            android:onClick="startstory"
            app:civ_border_color="@color/black"
            app:civ_border_width="3dp"
            android:layout_marginStart="5dp" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/beauty"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/beauty"
            android:onClick="startstory"
            app:civ_border_color="@color/black"
            app:civ_border_width="3dp"
            android:layout_marginStart="5dp" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/news1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/news1"
            android:onClick="startstory"
            app:civ_border_color="@color/black"
            app:civ_border_width="3dp"
            android:layout_marginStart="5dp" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="9dp"
            android:src="@drawable/home"
            android:layout_marginStart="9dp"
            android:contentDescription="@string/todo3" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="9dp"
            android:src="@drawable/search"
            android:layout_marginStart="9dp"
            android:contentDescription="@string/todo2" />

        <ImageView
            android:id="@+id/postBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="9dp"
            android:onClick="post"
            android:src="@drawable/camera"
            android:layout_marginStart="9dp"
            android:contentDescription="@string/todo5" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="9dp"
            android:src="@drawable/post"
            android:layout_marginStart="9dp"
            android:contentDescription="@string/todo6" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="9dp"
            android:src="@drawable/heart"
            android:layout_marginStart="9dp"
            android:contentDescription="@string/todo4" />


    </LinearLayout>

    <!--<Button-->
    <!--android:id="@+id/postBtn"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="end|bottom"-->
    <!--android:layout_margin="20dp"-->
    <!--android:onClick="post"-->
    <!--android:text="post"/>-->
</LinearLayout>